<resources>
    <string name="app_name">GWork</string>
    <string name="welcome_text">This App shows some of the basic controls in Android</string>
    <string name="i_am_an_example_of_textview">TextView Example</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="textfield_example">TextField Example</string>
    <string name="reset">Reset</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="toggle_button_example">Toggle button example</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="checkbox_example">CheckBox example</string>
    <string name="non_binary">Non binary</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="radio_button_example">Radio button example</string>
    <string name="spinner_example">Spinner example</string>
    <string name="light_a">Light A</string>
    <string name="light_b">Light B</string>
    <string name="light_c">Light C</string>
    <string name="your_name_will_appear_here">Your name will appear here</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="start_typing">0.</string>
    <string name="table_layout">Table layout</string>
    <string name="title_activity_tab_layout">TabLayout</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="home">Home</string>
    <string name="recents">Recents</string>
    <string name="favourites">Favourites</string>
    <string name="history">History</string>
    <string name="tab_layout">Tab layout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_fragment_uses_framelayout">This Fragment uses FrameLayout</string>
    <string name="this_fragment_uses_relativelayout">This Fragment uses RelativeLayout</string>
    <string name="this_fragment_uses_linearlayout">This Fragment uses LinearLayout</string>
</resources>