<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg"
        android:padding="8dp"
        android:text="@string/start_typing"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        android:stretchColumns="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display">

        <TableRow android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOne"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTwo"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonThree"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonFour"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonFive"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSix"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_6"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSeven"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_7"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEight"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNine"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_9"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonZero"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/secondaryColor"
                app:cornerRadius="28dp" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>