<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/i_am_an_example_of_textview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/nameTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/your_name_will_appear_here"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="?android:attr/textColorSecondary"
                        app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
                        app:layout_constraintStart_toStartOf="@+id/materialTextView2"
                        app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
                        tools:text="Student Name" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:spinnerMode="dropdown"
                        app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
                        app:layout_constraintStart_toStartOf="@+id/materialTextView2"
                        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/spinnerTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/spinner_example"
                        android:textColor="@color/secondaryColor"
                        app:layout_constraintEnd_toEndOf="@+id/spinner"
                        app:layout_constraintTop_toBottomOf="@+id/spinner" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/enter_your_name"
                        app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
                        app:layout_constraintStart_toStartOf="@+id/materialTextView2"
                        app:layout_constraintTop_toBottomOf="@+id/spinnerTextView">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textAutoCorrect|textPersonName|textAutoComplete|textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/textfield_example"
                        android:textColor="@color/secondaryColor"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/materialButtonToggleGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/materialTextView3">

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/light_a" />

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/light_b" />

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/light_c" />
                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/toggle_button_example"
                        android:textColor="@color/secondaryColor"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/materialCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/java"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/materialCheckBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/kotlin"
                        app:layout_constraintStart_toEndOf="@+id/materialCheckBox"
                        app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/checkbox_example"
                        android:textColor="@color/secondaryColor"
                        app:layout_constraintBottom_toBottomOf="@+id/materialCheckBox2"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintTop_toTopOf="@+id/materialCheckBox2" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/materialCheckBox">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/non_binary" />
                    </RadioGroup>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/radio_button_example"
                        android:textColor="@color/secondaryColor"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/reset"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>